--- a/index.html
+++ b/index.html
@@ -3,57 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Professionele BIAB nagelservice - Verzorgde nagels met hoogwaardige kwaliteit. Bekijk onze prijzen en boek direct.">
-  <title>BIAB Nagelservice</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta name="description" content="Professionele BIAB nagelstudio - ontdek onze services, prijzen en maak een afspraak.">
+  <title>BIAB Nagelstudio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>BIAB Nagels</h1>
+      <h1>BIAB Nagelstudio</h1>
       <nav>
         <ul>
           <li><a href="#services">Services</a></li>
-          <li><a href="#prices">Prijzen</a></li>
-          <li><a href="#about">Over Ons</a></li>
+          <li><a href="#pricing">Prijzen</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main>
-    <section id="hero">
-      <h2>Perfecte BIAB Nagels voor elke gelegenheid</h2>
-      <p>Hoogwaardige kwaliteit en persoonlijke service.</p>
-      <a href="#contact" class="btn">Boek Nu</a>
-    </section>
+  <section id="hero">
+    <div class="container">
+      <h2>De mooiste nagels, professioneel verzorgd</h2>
+      <p>Ontdek onze BIAB nagelbehandelingen en geef je handen een luxe uitstraling.</p>
+      <a href="#contact" class="btn">Maak een afspraak</a>
+    </div>
+  </section>
 
-    <section id="services">
-      <h2>Onze Services</h2>
-      <div class="services-container">
-        <div class="service">
-          <h3>BIAB Behandeling</h3>
-          <p>Versteviging van natuurlijke nagels met BIAB.</p>
-        </div>
-        <div class="service">
-          <h3>Gelnagels</h3>
-          <p>Mooie gelnagels met een duurzame afwerking.</p>
-        </div>
-        <div class="service">
-          <h3>Manicure</h3>
-          <p>Professionele verzorging van je handen en nagels.</p>
-        </div>
+  <section id="services" class="container">
+    <h2>Onze Services</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>BIAB Behandeling</h3>
+        <p>De perfecte behandeling voor sterke, gezonde nagels.</p>
       </div>
-    </section>
+      <div class="card">
+        <h3>Gelnagels</h3>
+        <p>Elegante nagels die lang meegaan.</p>
+      </div>
+      <div class="card">
+        <h3>Nail Art</h3>
+        <p>Unieke ontwerpen voor jouw persoonlijke stijl.</p>
+      </div>
+    </div>
+  </section>
 
-    <section id="prices">
-      <h2>Prijzen</h2>
-      <table>
+  <section id="pricing" class="container">
+    <h2>Prijzen</h2>
+    <table>
+      <thead>
         <tr>
           <th>Service</th>
           <th>Prijs</th>
         </tr>
+      </thead>
+      <tbody>
         <tr>
           <td>BIAB Behandeling</td>
           <td>€35</td>
@@ -63,31 +66,32 @@
           <td>€40</td>
         </tr>
         <tr>
-          <td>Manicure</td>
-          <td>€25</td>
+          <td>Nail Art</td>
+          <td>Vanaf €10</td>
         </tr>
-      </table>
-    </section>
+      </tbody>
+    </table>
+  </section>
 
-    <section id="about">
-      <h2>Over Ons</h2>
-      <p>Wij zijn gespecialiseerd in BIAB nagelbehandelingen en bieden persoonlijke aandacht voor jouw unieke stijl. Met hoogwaardige producten en een passie voor nagelverzorging zorgen we dat jouw nagels altijd stralen.</p>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <form id="contactForm">
-        <input type="text" name="name" placeholder="Naam" required>
-        <input type="email" name="email" placeholder="E-mail" required>
-        <textarea name="message" placeholder="Bericht" rows="5" required></textarea>
-        <button type="submit">Verstuur</button>
-      </form>
-      <p id="formMessage"></p>
-    </section>
-  </main>
+  <section id="contact" class="container">
+    <h2>Contact</h2>
+    <p>Neem contact met ons op om een afspraak te maken!</p>
+    <form id="contact-form">
+      <label for="name">Naam:</label>
+      <input type="text" id="name" name="name" required>
+      <label for="email">E-mail:</label>
+      <input type="email" id="email" name="email" required>
+      <label for="message">Bericht:</label>
+      <textarea id="message" name="message" required></textarea>
+      <button type="submit" class="btn">Verzenden</button>
+    </form>
+    <p id="form-message" class="hidden"></p>
+  </section>
 
   <footer>
-    <p>&copy; 2024 BIAB Nagels. Alle rechten voorbehouden.</p>
+    <div class="container">
+      <p>© 2024 BIAB Nagelstudio. Alle rechten voorbehouden.</p>
+    </div>
   </footer>
 
   <script src="script.js"></script>
